fix init()